--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,80 @@
-.App {
+h1 {
+  color: DodgerBlue;
+  padding: 20px;
+  font-size: 50px;
+  font-family: Arial;
   text-align: center;
+  text-decoration: underline;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+fieldset {
+    border-radius: 25px;
+    padding: 12px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+input {
+    width: 15%;
+    font-size: larger;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+button {
+  background-color: white;
+  color: black;
+  border: 2px solid #555555;
+  padding: 8px 16px;
+  text-align: center;
+  border-radius: 10px;
+  font-size: 16px;
+  font-weight: bolder;
+  margin-left: 5px; 
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #555555;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+img {
+  border-radius: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+figcaption {
+    width: 700px;
+    text-align: center;
+}
+
+
+/*navbar*/
+nav {
+    width: 100%;
+    background-color: rgb(79, 75, 83);
+    text-align: center;
+}
+
+a {
+    display: inline-block;
+    transition: 0.5s;
+    padding: 0PX 20PX;
+    font-size: 30PX;
+    text-decoration: none;
+    color: black;
+    font-weight: bolder;
+}
+
+a:hover {
+    transform: scale(1.3);
+}
+
+ol {
+    padding:0.2em ;
+    list-style-type: none;
+}
+
+.li-navbar{
+   display: inline-flex;
 }
